<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height"
    android:background="#FAF9FE"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_16"
    tools:context=".AddNote">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_44"
            android:src="@drawable/arrow" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_8"

            android:layout_marginTop="@dimen/dp_28"
            android:background="@null"
            android:fontFamily="@font/red_hat_display_medium"
            android:text="@string/button_back"
            android:textAllCaps="false"
            android:textColor="@color/hint_99879D"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/add_note"
        android:textColor="@color/spiice"
        android:textFontWeight="700"
        android:textSize="@dimen/sp_25"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_39"
        android:layout_marginEnd="@dimen/dp_17"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/br_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_hat_display_medium"
            android:textColor="@color/black"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/sp_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_39"
        android:layout_marginEnd="@dimen/dp_17"
        android:hint="@string/message">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/br_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_160"
            android:paddingBottom="@dimen/dp_124"
            android:textColorHint="#7E57C2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addNote"
        style="@style/bg_button"
        android:layout_width="@dimen/dp_263"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_49"
        android:layout_marginTop="@dimen/dp_150"
        android:text="@string/add_text"
        />

</LinearLayout>


