<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbles07" />

    <ImageView
        android:layout_width="@dimen/dp_343"
        android:layout_height="@dimen/dp_262"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_88"
        android:background="@drawable/bg_blur" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_139"
        android:layout_marginTop="@dimen/dp_120"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/log_in21"
        android:textColor="@color/spiice"
        android:textSize="@dimen/sp_27" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email21"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_192"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/email21">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/br_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password21"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_268"
        android:layout_marginEnd="@dimen/dp_40"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/password21"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/br_edit_text"
            android:inputType="textPassword"
            android:maxLength="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_log_in21"
        android:layout_width="@dimen/twoH_sixty_three_dp"
        android:layout_height="@dimen/fifty_four_dp"
        android:layout_marginStart="@dimen/fifty_six_dp"
        android:layout_marginTop="@dimen/sixH_two_dp"
        android:text="@string/log_in021"
        style="@style/bg_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/return_sign"
        android:layout_width="@dimen/dp_149"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_114"
        android:layout_marginTop="@dimen/dp_670"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/return_to_sign_up21"
        android:textAllCaps="false"
        android:textColor="@color/spiice"
        android:textSize="@dimen/eighteen_sp" />

</FrameLayout>