<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height"
    tools:context=".ActivitySeven">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbles07" />

    <ImageView
        android:layout_width="343dp"
        android:layout_height="412dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/bg_blur">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_139dp"
        android:layout_marginTop="@dimen/_120dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/sign_up07"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_27sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_188dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/first_name07"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName07"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_264dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/last_name07"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email07"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_340dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/email07"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password07"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_416dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/password07"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up07"
        android:layout_width="@dimen/twoH_sixty_three_dp"
        android:layout_height="@dimen/fifty_four_dp"
        android:layout_marginStart="@dimen/fifty_six_dp"
        android:layout_marginTop="@dimen/sixH_two_dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/have_account_login07"
        android:layout_width="@dimen/_240dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="@dimen/sixty_eight_dp"
        android:layout_marginTop="@dimen/_670dp"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/you_have_an_account_log_in"
        android:textAllCaps="false"
        android:textColor="@color/spiice"
        android:textSize="@dimen/eighteen_sp" />


</FrameLayout>