<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbles07" />

    <ImageView
        android:layout_width="343dp"
        android:layout_height="412dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="88dp"
        android:background="@drawable/bg_blur">

    </ImageView>

    <TextView
        android:id="@+id/sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_139"
        android:layout_marginTop="@dimen/dp_120"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/sign_up07"
        android:textColor="@color/spiice"
        android:textSize="@dimen/sp_27" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_188"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/first_name07"
        android:textColorHint="@color/hint_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edit_text_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:maxLength="15"
            android:textSize="@dimen/sp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_264"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/last_name07"
        android:textColorHint="@color/hint_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edit_text_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:maxLength="15"
            android:textSize="@dimen/sp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_340"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/email07"
        android:textColorHint="@color/hint_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edit_text_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:maxLength="15"
            android:textSize="@dimen/sp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_416"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/password07"
        android:textColorHint="@color/hint_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edit_text_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/sp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up07"
        android:layout_width="@dimen/twoH_sixty_three_dp"
        android:layout_height="@dimen/fifty_four_dp"
        android:layout_marginStart="@dimen/fifty_six_dp"
        android:layout_marginTop="@dimen/sixH_two_dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_18" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_login"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/sixty_eight_dp"
        android:layout_marginTop="@dimen/dp_670"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/you_have_an_account_log_in"
        android:textAllCaps="false"
        android:textColor="@color/spiice"
        android:textSize="@dimen/eighteen_sp" />


</FrameLayout>