<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height"
    tools:context=".ActivitySeven">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbles07" />

    <ImageView
        android:layout_width="@dimen/_343dp"
        android:layout_height="@dimen/_262dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_88dp"
        android:background="@drawable/bg_blur"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_139dp"
        android:layout_marginTop="@dimen/_120dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="@string/log_in21"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_27sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email21"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_44dp"
        android:layout_marginTop="@dimen/_192dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/email21"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password21"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46dp"
        android:layout_marginTop="@dimen/_268dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/password21"
        android:textColorHint="@color/_99879D">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_FBEAFF"
            android:fontFamily="@font/public_sans_medium"
            android:textSize="@dimen/_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_log_in21"
        android:layout_width="@dimen/twoH_sixty_three_dp"
        android:layout_height="@dimen/fifty_four_dp"
        android:layout_marginStart="@dimen/fifty_six_dp"
        android:layout_marginTop="@dimen/sixH_two_dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/log_in021"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/have_account_login21"
        android:layout_width="@dimen/_149dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="@dimen/_114dp"
        android:layout_marginTop="@dimen/_670dp"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/return_to_sign_up21"
        android:textAllCaps="false"
        android:textColor="@color/spiice"
        android:textSize="@dimen/eighteen_sp" />

</FrameLayout>