<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/One"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bubble01" />

    <TextView
        android:id="@+id/spiice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixty_five_dp"
        android:layout_marginTop="@dimen/twoH_eighteen_dp"
        android:width="@dimen/twoH_fouty_four_dp"
        android:height="@dimen/oneH_twenty_seven"
        android:fontFamily="@font/red_hat_display_medium"
        android:letterSpacing="-0.04"
        android:text="@string/spiice"
        android:textSize="@dimen/ninety_six_sp" />

    <Button
        android:id="@+id/button_discover_the_platform"
        android:layout_width=
            "@dimen/twoH_sixty_three_dp"
        android:layout_height="@dimen/fifty_four_dp"
        android:layout_marginStart="@dimen/fifty_six_dp"
        android:layout_marginTop="@dimen/sixH_two_dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/discover_the_platform"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_18" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/have_account_login"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_21"
        android:layout_marginStart="@dimen/sixty_eight_dp"
        android:layout_marginTop="@dimen/sixH_eighty_three_dp"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/you_have_an_account_log_in"
        android:textAllCaps="false"
        android:textColor="@color/spiice"
        android:textSize="@dimen/eighteen_sp" />

</FrameLayout>