<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Two"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bubbles02" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_activityTwo"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="@dimen/_312dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp" />

    <TextView
        android:id="@+id/spiice_activityTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_144dp"
        android:layout_marginTop="@dimen/_48dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:padding="@dimen/_8dp"
        android:text="@string/spiice"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_32sp" />

    <ImageView
        android:layout_width="@dimen/_271dp"
        android:layout_height="@dimen/_271dp"
        android:layout_gravity="center"
        android:src="@drawable/illustration_globe01" />

    <TextView
        android:id="@+id/find_projects_everywhere"
        android:layout_width="@dimen/_253dp"
        android:layout_height="@dimen/_58dp"
        android:layout_marginStart="@dimen/_61dp"
        android:layout_marginTop="@dimen/_643dp"
        android:fontFamily="@font/public_sans_regular"
        android:maxLines="2"
        android:text="@string/find_projects"
        android:textAlignment="center"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_18sp" />

    <ImageView
        android:id="@+id/diaporama01"
        android:layout_width="@dimen/_52dp"
        android:layout_height="@dimen/_7dp"
        android:layout_marginStart="@dimen/_161dp"
        android:layout_marginTop="@dimen/_733dp"
        android:src="@drawable/diaporama01" />

</FrameLayout>