<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Three"
    android:layout_width="@dimen/width"
    android:layout_height="@dimen/height">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bubbles03" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_activityThree"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="@dimen/_314dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@null"
        android:fontFamily="@font/public_sans_medium"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp" />

    <TextView
        android:id="@+id/spiice_activityThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_144dp"
        android:layout_marginTop="@dimen/_48dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:padding="@dimen/_8dp"
        android:text="@string/spiice"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_32sp" />

    <ImageView
        android:layout_width="@dimen/_276dp"
        android:layout_height="@dimen/_354dp"
        android:layout_marginStart="@dimen/_47dp"
        android:layout_marginTop="@dimen/_148dp"
        android:src="@drawable/illustration03" />

    <TextView
        android:id="@+id/make_money"
        android:layout_width="@dimen/_227dp"
        android:layout_height="@dimen/_58dp"
        android:layout_marginStart="@dimen/_74dp"
        android:layout_marginTop="@dimen/_643dp"
        android:fontFamily="@font/public_sans_regular"
        android:maxLines="2"
        android:text="@string/make_money"
        android:textAlignment="center"
        android:textColor="@color/spiice"
        android:textSize="@dimen/_18sp" />

    <ImageView
        android:id="@+id/doaporama03"
        android:layout_width="@dimen/_52dp"
        android:layout_height="@dimen/_7dp"
        android:layout_marginStart="@dimen/_161dp"
        android:layout_marginTop="@dimen/_733dp"
        android:src="@drawable/diaporama02" />

</FrameLayout>




